--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -9,10 +9,15 @@
     <div class="col-md-8 p-5">
       <div class="card">
         <div class="card-header">       
-          Новый пост             
+          {% if is_edit %} 
+            Редактировать пост 
+          {% else %} 
+            Новый пост 
+        {% endif %}             
         </div>
         <div class="card-body">        
-          <form method="post" action="../posts/create_post.html">
+          <form method="post" action="../posts/create_post.html" enctype="multipart/form-data">
+            {% csrf_token %}
             <input type="hidden" name="csrfmiddlewaretoken" value="">            
             <div class="form-group row my-3 p-3">
               <label for="id_text">
@@ -36,6 +41,12 @@
               <small id="id_group-help" class="form-text text-muted">
                 Группа, к которой будет относиться пост
               </small>
+            </div>
+            <div class="form-group row my-3 p-3">
+              <label for="id_image">
+                Картинка                      
+              </label>
+              <input type="file" name="image" accept="image/*" class="form-control" id="id_image">                      
             </div>
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary">
