--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% load static %}
 {% block title %}
   {{ group.title }}
@@ -11,7 +12,10 @@
       <ul>
         <li>Автор: {{ post.author.get_full_name }}</li>
         <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
-      </ul>      
+      </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}      
       <p>
         {{ post.text }}
       </p>
