--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}
   Последние обновления на сайте
 {% endblock %} 
@@ -10,6 +11,11 @@
       </li>
       <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
     </ul>
+    {% if post.image %}
+    {% thumbnail post.image "300x300" crop="center" upscale=True as im %}
+      <img class="card-img my-2" src="{{ im.url }}">
+    {% endthumbnail %}
+    {% endif %}      
     <p>{{ post.text }}
       <a href="{% url 'posts:post_detail' post_id=post.pk %}">подробная информация </a>
     </p>    
