--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -3,6 +3,7 @@
 Пост {{ post|truncatechars:30 }}
 {% endblock %}
 {% block content %}
+{% load thumbnail %}
   <div class="row">
     <aside class="col-12 col-md-3">
       <ul class="list-group list-group-flush">
@@ -31,12 +32,17 @@
       </ul>
     </aside>
     <article class="col-12 col-md-9">
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p>
-        {{ post.text }}
-    </p>
-    <button type="submit" class="btn btn-primary" a href="{% url 'posts:post_edit' post.id %}">
-        Редактировать пост
-    </button>
+        {{ post.text|linebreaksbr }}
+      </p>
+      <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+      {% if post.author == request.user %}
+        <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">Редактировать пост</a>
+      {% endif %}
+      </button>
     </article>
   </div> 
 {% endblock %}
