--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,12 +4,26 @@
     Профайл пользователя {{ username.get_full_name }}
 {% endblock %}
 {% block content %}
-  <div class="container py-5">        
-    <h1>Все посты пользователя {{ username.get_full_name }} </h1>
-    <h3>Всего постов: {{ username.posts.count }} </h3>   
-    {% for post in page_obj %}
-      <article>
-        <ul>
+  <div class="mb-5">
+    <h1>Все посты пользователя {{ author.get_full_name }}</h1>
+    <h3>Всего постов: {{ posts_count }}</h3>
+    {% if following %}
+      <a
+        class="btn btn-lg btn-light"
+        href="{% url 'posts:profile_unfollow' author.username %}" role="button">
+        Отписаться
+      </a>
+    {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button">
+        Подписаться
+      </a>
+   {% endif %}
+  </div>  
+  {% for post in page_obj %}
+    <article>
+      <ul>
         <li>
           Автор: {{ username.get_full_name }}
           <a href="{% url 'posts:profile' post.author.get_username %}">все посты пользователя</a>
@@ -17,20 +31,20 @@
         <li>
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+      </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
         <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>
-          {{ post.text }}
-        </p>
-        <a href="{% url 'posts:post_detail' post_id=post.pk %}">подробная информация </a>
-      </article>       
-      {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-      {% endif %}
+      {% endthumbnail %}
+      <p>
+        {{ post.text }}
+      </p>
+      <a href="{% url 'posts:post_detail' post_id=post.pk %}">подробная информация </a>
+    </article>       
+    {% if post.group %}
+      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+    {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
-    {% include 'posts/includes/paginator.html' %} 
+  {% endfor %}
+  {% include 'posts/includes/paginator.html' %} 
   </div>
 {% endblock %}
